# sheesh

./: CLAUDE.md  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: pipeline.yaml
kebab/: Cargo.toml
kebab/src/: main.rs
sheesh/: Cargo.toml
sheesh/src/: lib.rs  pe.rs  trailer.rs
sheesh/src/platform/: mod.rs
src/: data.rs  lib.rs  windows_pe.rs
src/platform/: mod.rs  unix.rs  windows.rs
